@@ -3,7 +3,6 @@
 - make sure that the assignment operator and copy constructor for the
   segment Voronoi diagram hierarchy class do not have any bugs
 - in predicates/Svd_arrangement_type_C2.h put all functions inside the class
-- update doc of storage site: add the methods source_site() and target_site()
 - add a method insert_point_no_search in the segment Voronoi diagram class
   that inserts a point without searching for the nearest neighbor;
   the assumption here is that the nearest neighbor given is already known
@@ -11,16 +10,8 @@
   rewritten so that it uses insert_point_no_search as a subroutine; the
   segment Voronoi diagram hierarchy needs this method when inserting a point:
   the nearest neighbors of the point at all levels are known...
-- remove the site set_* methods from the spec
 - use the input sites container as the container where point handles
   are gotten from
-- remove the STORE_INPUT_SITES macro; use the input point container as
-  the container for the point handles (this means that the input point
-  container must be a list)
-- make sure all types in the doc correspond to real types in the code
-- add swap method in hierarchy; verify that the swap method in the segment
-  Voronoi diagram class works correctly (does it swap the point container
-  correctly?)
 - in class Svd_basic_constructions_C2.h, inside method to_ft, check
   if sqrt is supported by the number type; actually this is ok for predicates
   but constructions also need to use this too.
