@@ -39,7 +39,8 @@ class Segment_Voronoi_diagram_storage_site_2
 public:
   typedef Gt                             Geom_traits;
   typedef typename Geom_traits::Site_2   Site_2;
-  typedef typename std::list<typename Site_2::Point_2>::iterator Point_handle;
+  typedef typename std::set<typename Site_2::Point_2>::iterator Point_handle;
+  //  typedef typename std::list<typename Site_2::Point_2>::iterator Point_handle;
 
 protected:
   typedef Point_handle                   Handle;
